# hospital_sim

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  client_demo.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  smoke_test.py  test_inference.py
server/: Dockerfile  __init__.py  app.py  hospital_environment.py
